# TopoLI

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  THEORY.md
topoli/: config.py  eval.py  interaction.py  pipeline.py  pruning.py
topoli/data/: __init__.py  dataset_builder.py  hard_negatives.py  loader.py  passage_extractor.py  quality_filter.py  query_generator.py  query_generator_impl.py  source_config.py
topoli/evaluate/: __init__.py  retrieval_eval.py
topoli/finetune/: __init__.py  contrastive_loss.py  finetune_config.py  topo_distill.py  topo_loss.py  trainer.py
topoli/model/: __init__.py  colbert_head.py  encoder.py  model_config.py  pruning_head.py  tokenizer.py
topoli/pretrain/: __init__.py  mlm_dataset.py  mlm_objective.py  pretrain_config.py  trainer.py
topoli/scripts/: __init__.py  build_dataset.py  evaluate_beir.py  export_hf.py  finetune.py  pretrain.py
topoli/tda/: persistence.py  scoring.py
topoli/tests/: test_benchmarks.py  test_colbert_head.py  test_config.py  test_contrastive_loss.py  test_data_loader.py  test_data_source.py  test_dataset_builder.py  test_encoder.py  test_eval.py  test_evaluate.py  test_finetune_trainer.py  test_hard_negatives.py  test_interaction.py  test_mlm.py  test_model_config.py  test_passage_extractor.py  test_persistence.py  test_pipeline.py  test_pretrain_trainer.py  test_pruning.py  test_pruning_head.py  test_quality_filter.py  test_query_gen_impl.py  test_query_generator.py  test_scoring.py  test_tokenizer.py  test_topo_distill.py  test_topo_loss.py  test_training_config.py
